Doctores, home y header avanzado

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sanity/client": "^1.149.18",
+    "@sanity/image-url": "^0.140.19",
+    "axios": "^0.19.2",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
