--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@sanity/client": "^1.149.18",
     "@sanity/image-url": "^0.140.19",
     "axios": "^0.19.2",
+    "cookie": "^0.4.1",
+    "formik": "^2.1.5",
     "mailgun-js": "^0.22.0",
     "next": "9.4.4",
+    "next-cookies": "^2.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-player": "^2.6.1",
