--- a/cms/package.json
+++ b/cms/package.json
@@ -14,16 +14,17 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^1.150.5",
-    "@sanity/components": "^1.150.5",
-    "@sanity/core": "^1.150.3",
-    "@sanity/default-layout": "^1.150.5",
-    "@sanity/default-login": "^1.150.1",
-    "@sanity/desk-tool": "^1.150.5",
-    "@sanity/vision": "^1.150.1",
+    "@sanity/base": "^2.0.9",
+    "@sanity/components": "^2.0.9",
+    "@sanity/core": "^2.0.9",
+    "@sanity/default-layout": "^2.0.9",
+    "@sanity/default-login": "^2.0.9",
+    "@sanity/desk-tool": "^2.0.9",
+    "@sanity/vision": "^2.0.9",
     "prop-types": "^15.6",
     "react": "^16.2",
-    "react-dom": "^16.2"
+    "react-dom": "^16.2",
+    "sanity-plugin-markdown": "^1.0.1"
   },
   "devDependencies": {}
 }
