--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-cookies": "^2.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-markdown": "^5.0.2",
     "react-player": "^2.6.1",
     "react-select": "^3.1.0"
   },
